--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -7,7 +7,6 @@ on:
     # como quiero que vea todo puedo poner "*" pero prefiero borrarlo :3
     # paths:
     #   - "*"
-      
 jobs:
   dispatch:
     runs-on: ubuntu-latest
@@ -15,6 +14,6 @@ jobs:
       - name: Trigger Quartz Build
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.WIKITEX_TOKEN }}
+          token: ${{ secrets.JJ_TOKEN }}
           repository: n1krov/wikitex
           event-type: trigger-quartz-deploy
